--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>New page</title>
+	<title>Title of the page</title>
 </head>
 <body>
-<h2>This is just heading</h2>
-<h1>Hello, world!</h1>
+<h4>This is just heading</h4>
+<p>Hello, world!</p>
 </body>
 </html>
